syntax = "proto3";

package user;

option go_package = "protobuf/user";

import "protocol/user/common.proto";
import "protocol/user/entity/entity_user.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// 用户服务
service User {
  // 注册
  rpc SignUp(SignUpReq) returns (NullRes) {}
  // 登录
  rpc SignIn(SignInReq) returns (SignInRes) {}
  // 查询账号是否可用（唯一性）
  rpc CheckPassport(CheckPassportReq) returns (CheckPassportRes) {}
  // 查询昵称是否可用（唯一性）
  rpc CheckNickName(CheckNickNameReq) returns (CheckNickNameRes) {}
  // 获取指定Session信息
  rpc GetSession(GetSessionReq) returns (GetSessionRes) {}
  // 查询指定用户信息
  rpc GetUser(GetUserReq) returns (GetUserRes) {}
}

// 注册请求
message SignUpReq {
  // 账号
  string Passport  = 1 [(gogoproto.moretags) = 'v:"required|length:6,16#账号不能为空|账号长度应当在:min到:max之间"'];
  // 密码
  string Password  = 2 [(gogoproto.moretags) = 'v:"required|length:6,16#密码不能为空|密码长度应当在:min到:max之间"'];
  // 昵称
  string Nickname  = 3;
}

// 登录请求
message SignInReq {
  // 账号
  string Passport = 1 [(gogoproto.moretags) = 'v:"required#账号不能为空"'];
  // 密码
  string Password = 2 [(gogoproto.moretags) = 'v:"required#密码不能为空"'];
  // 客户端类型(H5/IOS/Android/Wechat/Micro)
  string Agent    = 3;
}

// 登录结果
message SignInRes {
  EntityUser User  = 1; // 用户信息
  string     Token = 2; // SessionId
}

// 账号唯一性检测请求参数，用于前后端交互参数格式约定
message CheckPassportReq  {
  string Passport = 1 [(gogoproto.moretags) = 'v:"required#账号不能为空"'];
}

// 账号唯一性检测结果
message CheckPassportRes {
  bool Ok = 1;
}

// 昵称唯一性检测请求参数，用于前后端交互参数格式约定
message CheckNickNameReq {
  string Nickname = 1 [(gogoproto.moretags) = 'v:"required#昵称不能为空"'];
}

// 昵称唯一性检测结果
message CheckNickNameRes {
  bool Ok = 1;
}

// 获取用户Session信息
message GetSessionReq {
  string Token = 1 [(gogoproto.moretags) = 'v:"required#Token不能为空"'];
}

// 获取用户Session信息结果
message GetSessionRes {
  SessionUser User       = 1; // Session中的用户信息
  int64       LoginTime  = 2; // 登录时间
  string      LoginAgent = 3; // 登录终端
}

message SessionUser {
  uint32 Id       = 1; // 用户ID
  string Passport = 2; // 用户账号
  string Password = 3; // 用户密码
  string Nickname = 4; // 用户昵称
}

// 查询指定用户信息
message GetUserReq {
  uint32 UserId = 1 [(gogoproto.moretags) = 'v:"min:1#用户ID不能为空"'];
}

// 查询指定用户信息结果
message GetUserRes {
  EntityUser User = 1; // 用户信息
}